--- a/OrgSite.html
+++ b/OrgSite.html
@@ -3,23 +3,156 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <h1>Organization Site</h1>
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="OrgSite.css">
     </head>
     <body>
-        <div class="timetable">
-        <div class="days">
-            <div>Monday</div>
-            <div>Tuesday</div>
-            <div>Wednesday</div>
-            <div>Thursday</div>
-            <div>Friday</div>
-            <div>Saturday</div>
-            <div>Sunday</div>
+        <h1>Organization Site</h1>
+        <div class="container">
+            <div class="switch">
+                <label class="switch">
+                    <input type="checkbox" id="toggle-view">
+                    <span class="slider round"></span>
+                </label>
+                <span>Toggle Month View</span>
+            </div>
+            <div id="week">
+                <div class="days">
+                    <div>Monday</div>
+                    <div>Tuesday</div>
+                    <div>Wednesday</div>
+                    <div>Thursday</div>
+                    <div>Friday</div>
+                    <div>Saturday</div>
+                    <div>Sunday</div>
+                </div>
+                <div class="hours">
+                    <div class="each-hour" data-hour="1"></div>
+                    <div class="each-hour" data-hour="2"></div>
+                    <div class="each-hour" data-hour="3"></div>
+                    <div class="each-hour" data-hour="4"></div>
+                    <div class="each-hour" data-hour="5"></div>
+                    <div class="each-hour" data-hour="6"></div>
+                    <div class="each-hour" data-hour="7"></div>
+                    <div class="each-hour" data-hour="8"></div>
+                    <div class="each-hour" data-hour="9"></div>
+                    <div class="each-hour" data-hour="10"></div>
+                    <div class="each-hour" data-hour="11"></div>
+                    <div class="each-hour" data-hour="12"></div>
+                    <div class="each-hour" data-hour="13"></div>
+                    <div class="each-hour" data-hour="14"></div>
+                    <div class="each-hour" data-hour="15"></div>
+                    <div class="each-hour" data-hour="16"></div>
+                    <div class="each-hour" data-hour="17"></div>
+                    <div class="each-hour" data-hour="18"></div>
+                    <div class="each-hour" data-hour="19"></div>
+                    <div class="each-hour" data-hour="20"></div>
+                    <div class="each-hour" data-hour="21"></div>
+                    <div class="each-hour" data-hour="22"></div>
+                    <div class="each-hour" data-hour="23"></div>
+                    <div class="each-hour" data-hour="24"></div>
+                </div>
+            </div>
+            <div id="month" class="hidden">
+                /*Still need to add grid*/
+            </div>
+            <button id="add-event" title="Add Task/Event">+</button>
+            <div id="event-form" class="hidden">
+                <h2>Add Task/Event</h2>
+                <form id="add-event-form">
+                    <label>Event/Task: <input type="text" id="event-name" required></label>
+                    <label>Day:
+                        <select id="event-day" required>
+                            <option value="Monday">Monday</option>
+                            <option value="Tuesday">Tuesday</option>
+                            <option value="Wednesday">Wednesday</option>
+                            <option value="Thursday">Thursday</option>
+                            <option value="Friday">Friday</option>
+                            <option value="Saturday">Saturday</option>
+                            <option value="Sunday">Sunday</option>
+                        </select>
+                    </label><br>
+                    <label>
+                        Start Time:
+                        <select id="start-hour" required>
+                            <option value="1">1 AM</option>
+                            <option value="2">2 AM</option>
+                            <option value="3">3 AM</option>
+                            <option value="4">4 AM</option>
+                            <option value="5">5 AM</option>
+                            <option value="6">6 AM</option>
+                            <option value="7">7 AM</option>
+                            <option value="8">8 AM</option>
+                            <option value="9">9 AM</option>
+                            <option value="10">10 AM</option>
+                            <option value="11">11 AM</option>
+                            <option value="12">12 PM</option>
+                            <option value="13">1 PM</option>
+                            <option value="14">2 PM</option>
+                            <option value="15">3 PM</option>
+                            <option value="16">4 PM</option>
+                            <option value="17">5 PM</option>
+                            <option value="18">6 PM</option>
+                            <option value="19">7 PM</option>
+                            <option value="20">8 PM</option>
+                            <option value="21">9 PM</option>
+                            <option value="22">10 PM</option>
+                            <option value="23">11 PM</option>
+                            <option value="24">12 AM</option>
+                        </select>
+                    </label>
+                    <label>
+                        End Time:
+                        <select id="end-hour" required>
+                            <option value="1">1 AM</option>
+                            <option value="2">2 AM</option>
+                            <option value="3">3 AM</option>
+                            <option value="4">4 AM</option>
+                            <option value="5">5 AM</option>
+                            <option value="6">6 AM</option>
+                            <option value="7">7 AM</option>
+                            <option value="8">8 AM</option>
+                            <option value="9">9 AM</option>
+                            <option value="10">10 AM</option>
+                            <option value="11">11 AM</option>
+                            <option value="12">12 PM</option>
+                            <option value="13">1 PM</option>
+                            <option value="14">2 PM</option>
+                            <option value="15">3 PM</option>
+                            <option value="16">4 PM</option>
+                            <option value="17">5 PM</option>
+                            <option value="18">6 PM</option>
+                            <option value="19">7 PM</option>
+                            <option value="20">8 PM</option>
+                            <option value="21">9 PM</option>
+                            <option value="22">10 PM</option>
+                            <option value="23">11 PM</option>
+                            <option value="24">12 AM</option>
+                        </select>
+                    </label><br>
+                    <label>Description: <input></label>
+                    <button type="submit">Add Event</button>
+                </form>
+            </div>
         </div>
-        <div class="hours">
-            
-        </div>
-
+        <script>
+            const toggle = document.getElementById('toggle-view');
+            const weekView = document.getElementById('week');
+            const monthView = document.getElementById('month');
+            const add = document.getElementById('add-event');
+            const form = document.getElementById('event-form');
+            toggle.addEventListener('change', () => {
+                if(toggle.checked){
+                    weekView.classList.add('hidden');
+                    monthView.classList.remove('hidden');
+                }
+                else{
+                    weekView.classList.remove('hidden');
+                    monthView.classList.add('hidden');
+                }
+            });
+            add.addEventListener('click',() =>{
+                form.classList.remove('hidden');
+            });
+        </script>
     </body>
 </html>
