--- a/OrgSite.html
+++ b/OrgSite.html
@@ -32,8 +32,25 @@
       </div>
 
       <div id="month" class="hidden">
-        <p style="text-align:center; color:gray;">Month view coming soon...</p>
-      </div>
+  <div class="month-header">
+    <button id="prev-month">‹</button>
+    <h2 id="month-name"></h2>
+    <button id="next-month">›</button>
+  </div>
+
+  <div class="month-days-header">
+    <div>Sun</div>
+    <div>Mon</div>
+    <div>Tue</div>
+    <div>Wed</div>
+    <div>Thu</div>
+    <div>Fri</div>
+    <div>Sat</div>
+  </div>
+
+  <div class="month-grid"></div>
+</div>
+
 
       <button id="add-event" title="Add Task/Event">+</button>
 
