--- a/OrgSite.html
+++ b/OrgSite.html
@@ -1,146 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Organization Site</title>
-    <link rel="stylesheet" href="OrgSite.css" />
-  </head>
-  <body>
-    <h1>Organization Site</h1>
-    <div class="container">
-      <div class="switch">
-        <label class="switch">
-          <input type="checkbox" id="toggle-view" />
-          <span class="slider round"></span>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Organization Site</title>
+  <link rel="stylesheet" href="OrgSite.css" />
+</head>
+<body>
+  <h1>Organization Site</h1>
+  <div class="container">
+
+    <div class="view-toggle">
+      <label class="switch">
+        <input type="checkbox" id="toggle-view" />
+        <span class="slider"></span>
+      </label>
+      <span id="toggle-label">Switch View</span>
+    </div>
+
+    <div id="week">
+      <div class="week-nav">
+        <button id="prev-week">‹</button>
+        <span id="week-range"></span>
+        <button id="next-week">›</button>
+      </div>
+
+      <div class="days">
+        <div>Hour</div>
+        <div class="day-header"></div>
+        <div class="day-header"></div>
+        <div class="day-header"></div>
+        <div class="day-header"></div>
+        <div class="day-header"></div>
+        <div class="day-header"></div>
+        <div class="day-header"></div>
+      </div>
+      <div class="hours"></div>
+    </div>
+
+    <div id="month" class="hidden">
+      <div class="month-header">
+        <button id="prev-month">‹</button>
+        <h2 id="month-name"></h2>
+        <button id="next-month">›</button>
+      </div>
+
+      <div class="month-days-header">
+        <div>Sun</div><div>Mon</div><div>Tue</div><div>Wed</div><div>Thu</div><div>Fri</div><div>Sat</div>
+      </div>
+
+      <div class="month-grid"></div>
+    </div>
+
+    <button id="add-event" title="Add Task/Event">+</button>
+
+    <div id="event-form" class="hidden" aria-hidden="true">
+      <h2 id="form-title">Add Task/Event</h2>
+      <form id="add-event-form">
+        <label>Event/Task: <input type="text" id="event-name" required /></label>
+        <label>Event Date: <input type="date" id="event-date" required /></label>
+        <br/>
+        <label>Start Time:
+          <select id="start-hour" required></select>
         </label>
-        <span>Toggle Month View</span>
-      </div>
-
-      <div id="week">
-        <div class="days">
-          <div class="day-header"></div>
-          <div class="day-header"></div>
-          <div class="day-header"></div>
-          <div class="day-header"></div>
-          <div class="day-header"></div>
-          <div class="day-header"></div>
-          <div class="day-header"></div>
+        <label>End Time:
+          <select id="end-hour" required></select>
+        </label>
+        <br/>
+        <label>Description: <input type="text" id="event-desc" /></label>
+        <div class="form-actions">
+          <button type="button" id="cancel-event">Cancel</button>
+          <button type="submit" id="submit-event">Add Event</button>
         </div>
-        <div class="hours">
+      </form>
+    </div>
+
+    <div id="event-detail-overlay" class="hidden" aria-hidden="true">
+      <div id="event-detail">
+        <button id="close-detail" class="icon-btn">✕</button>
+        <h3 id="detail-title"></h3>
+        <p id="detail-time"></p>
+        <p id="detail-desc"></p>
+        <div class="detail-actions">
+          <button id="edit-event" title="Edit (pen)">✎</button>
+          <button id="remove-event" title="Remove">🗑</button>
         </div>
-      </div>
-
-      <div id="month" class="hidden">
-  <div class="month-header">
-    <button id="prev-month">‹</button>
-    <h2 id="month-name"></h2>
-    <button id="next-month">›</button>
-  </div>
-
-  <div class="month-days-header">
-    <div>Sun</div>
-    <div>Mon</div>
-    <div>Tue</div>
-    <div>Wed</div>
-    <div>Thu</div>
-    <div>Fri</div>
-    <div>Sat</div>
-  </div>
-
-  <div class="month-grid"></div>
-</div>
-
-
-      <button id="add-event" title="Add Task/Event">+</button>
-
-      <div id="event-form" class="hidden">
-        <h2>Add Task/Event</h2>
-        <form id="add-event-form">
-          <label>
-            Event/Task:
-            <input type="text" id="event-name" required />
-          </label>
-          <label>
-            Day:
-            <select id="event-day" required>
-              <option value="Monday">Monday</option>
-              <option value="Tuesday">Tuesday</option>
-              <option value="Wednesday">Wednesday</option>
-              <option value="Thursday">Thursday</option>
-              <option value="Friday">Friday</option>
-              <option value="Saturday">Saturday</option>
-              <option value="Sunday">Sunday</option>
-            </select>
-          </label>
-          <br />
-          <label>
-            Start Time:
-            <select id="start-hour" required>
-              <option value="1">1 AM</option>
-              <option value="2">2 AM</option>
-              <option value="3">3 AM</option>
-              <option value="4">4 AM</option>
-              <option value="5">5 AM</option>
-              <option value="6">6 AM</option>
-              <option value="7">7 AM</option>
-              <option value="8">8 AM</option>
-              <option value="9">9 AM</option>
-              <option value="10">10 AM</option>
-              <option value="11">11 AM</option>
-              <option value="12">12 PM</option>
-              <option value="13">1 PM</option>
-              <option value="14">2 PM</option>
-              <option value="15">3 PM</option>
-              <option value="16">4 PM</option>
-              <option value="17">5 PM</option>
-              <option value="18">6 PM</option>
-              <option value="19">7 PM</option>
-              <option value="20">8 PM</option>
-              <option value="21">9 PM</option>
-              <option value="22">10 PM</option>
-              <option value="23">11 PM</option>
-              <option value="24">12 AM</option>
-            </select>
-          </label>
-          <label>
-            End Time:
-            <select id="end-hour" required>
-              <option value="1">1 AM</option>
-              <option value="2">2 AM</option>
-              <option value="3">3 AM</option>
-              <option value="4">4 AM</option>
-              <option value="5">5 AM</option>
-              <option value="6">6 AM</option>
-              <option value="7">7 AM</option>
-              <option value="8">8 AM</option>
-              <option value="9">9 AM</option>
-              <option value="10">10 AM</option>
-              <option value="11">11 AM</option>
-              <option value="12">12 PM</option>
-              <option value="13">1 PM</option>
-              <option value="14">2 PM</option>
-              <option value="15">3 PM</option>
-              <option value="16">4 PM</option>
-              <option value="17">5 PM</option>
-              <option value="18">6 PM</option>
-              <option value="19">7 PM</option>
-              <option value="20">8 PM</option>
-              <option value="21">9 PM</option>
-              <option value="22">10 PM</option>
-              <option value="23">11 PM</option>
-              <option value="24">12 AM</option>
-            </select>
-          </label>
-          <br />
-          <label>
-            Description:
-            <input type="text" id="event-desc" />
-          </label>
-          <button type="submit">Add Event</button>
-        </form>
       </div>
     </div>
-    <script src="OrgSite.js"></script>
-  </body>
+
+  </div>
+
+  <script src="OrgSite.js"></script>
+</body>
 </html>
