--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Organization Site</title>
-  <link rel="stylesheet" href="OrgSite.css" />
+  <title>Asthetic Organization</title>
 </head>
 <body>
   <h1>Organization Site</h1>
