--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Asthetic Organization</title>
 </head>
 <body>
-  <h1>Organization Site</h1>
+  <h1>Asthetic Organization</h1>
   <div class="container">
 
     <div class="view-toggle">
